--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -292,7 +292,7 @@
   </div>
   <div class="modal-footer">
     <div class="alignright">
-      <button class="btn-status-default" type="button" ng-click="loadCustomer()"><i class="fa fa-group"></i></button>
+      <!-- <button class="btn-status-default" type="button" ng-click="loadCustomer()"><i class="fa fa-group"></i></button> -->
       <button type="submit" class="btn-status-success" ng-click="ok()">Submit</button>
       <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
     </div>
