--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -292,7 +292,7 @@
   </div>
   <div class="modal-footer">
     <div class="alignright">
-      <!-- <button class="btn-status-default" type="button" ng-click="loadCustomer()"><i class="fa fa-group"></i></button> -->
+      <button class="btn-status-default" type="button" ng-click="loadCustomer()"><i class="fa fa-group"></i> Existing Customer</button>
       <button type="submit" class="btn-status-success" ng-click="ok()">Submit</button>
       <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
     </div>
@@ -379,15 +379,38 @@
 </script>
 
 
-<!-- DELETE ORDER MODAL-->
+<!-- CUSTOMER AUTOFILL MODAL-->
 <script type="text/ng-template" id="loadCustomerModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Delete Product</h3>
+    <h3 class="modal-title">Choose Existing Customer</h3>
   </div>
   <div class="modal-body">
-    <p>Are you sure you want to delete this order?
-      <br>
-      <br> Note that this will add back any inventory quantities from the batches corresponding to each item.</p>
+      <div class="panel-scroll">
+        <div class="table-responsive">
+          <table class="table tableWhite">
+            <thead>
+              <tr>
+                <th>Select</th>
+                <th>Name</th>
+                <th>Company</th>
+                <th>Email</th>
+                <th>Phone</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="customer in customers track by $index">
+                <td data-label="Select">
+                  <input type="radio" ng-model="$parent.selectedCustomer" ng-value="$parent.customers[$index]">
+                </td>
+                <td data-label="Name">&nbsp; {{customers[$index].name}}</td>
+                <td data-label="Company">&nbsp; {{customers[$index].company}}</td>
+                <td data-label="Email">&nbsp; {{customers[$index].email}}</td>
+                <td data-label="Phone">&nbsp; {{customers[$index].phone}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
   </div>
   <div class="modal-footer">
     <button class="btn-status-success" type="button" ng-click="ok()">Yes</button>
