--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -47,6 +47,12 @@
                   </tbody>
                 </table>
               </div>
+              <ul class="pagination pagination-md" ng-init="item=1">
+                <li ng-class="{active:item==1}"><a ng-click="item=1">1</a></li>
+                <li ng-class="{active:item==2}"><a ng-click="item=2" href="">2</a></li>
+                <li ng-class="{active:item==3}"><a ng-click="item=3" href="">3</a></li>
+                <li ng-class="{active:item==4}"><a ng-click="item=4" href="">4</a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -385,32 +391,32 @@
     <h3 class="modal-title">Choose Existing Customer</h3>
   </div>
   <div class="modal-body">
-      <div class="panel-scroll">
-        <div class="table-responsive">
-          <table class="table tableWhite">
-            <thead>
-              <tr>
-                <th>Select</th>
-                <th>Name</th>
-                <th>Company</th>
-                <th>Email</th>
-                <th>Phone</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr ng-repeat="customer in customers track by $index">
-                <td data-label="Select">
-                  <input type="radio" ng-model="$parent.selectedCustomer" ng-value="$parent.customers[$index]">
-                </td>
-                <td data-label="Name">&nbsp; {{customers[$index].name}}</td>
-                <td data-label="Company">&nbsp; {{customers[$index].company}}</td>
-                <td data-label="Email">&nbsp; {{customers[$index].email}}</td>
-                <td data-label="Phone">&nbsp; {{customers[$index].phone}}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+    <div class="panel-scroll">
+      <div class="table-responsive">
+        <table class="table tableWhite">
+          <thead>
+            <tr>
+              <th>Select</th>
+              <th>Name</th>
+              <th>Company</th>
+              <th>Email</th>
+              <th>Phone</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="customer in customers track by $index">
+              <td data-label="Select">
+                <input type="radio" ng-model="$parent.selectedCustomer" ng-value="$parent.customers[$index]">
+              </td>
+              <td data-label="Name">&nbsp; {{customers[$index].name}}</td>
+              <td data-label="Company">&nbsp; {{customers[$index].company}}</td>
+              <td data-label="Email">&nbsp; {{customers[$index].email}}</td>
+              <td data-label="Phone">&nbsp; {{customers[$index].phone}}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+    </div>
   </div>
   <div class="modal-footer">
     <button class="btn-status-success" type="button" ng-click="ok()">Yes</button>
