--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -36,29 +36,29 @@
   </div>
   <div class="modal-body">
 
-        <div class="table-responsive">
-          <table class="table tableWhite">
-            <thead>
-              <tr>
-                <th>Select</th>
-                <th>Product Type</th>
-                <th>Quantity</th>
-                <th>Batch #</th>
-                <th>Inventory Input Date</th>
-              </tr>
-            </thead>
-            <tbody ng-repeat="block in blocks track by $index">
-              <tr>
-                <td data-label="Select">
-                  <input type="radio" ng-model="$parent.selectedBlock" ng-value="$parent.blocks[$index]">
-                </td>
-                <td data-label="Product">{{block.productType.name}}</td>
-                <td data-label="Quantity">{{block.quantity + " " + block.units}}</td>
-                <td data-label="Batch #">&nbsp;{{block.blockNumber}}</td>
-                <td data-label="Add Date">{{block.dateCreated | date: 'short'}}</td>
-              </tr>
-            </tbody>
-          </table>
+    <div class="table-responsive">
+      <table class="table tableWhite">
+        <thead>
+          <tr>
+            <th>Select</th>
+            <th>Product Type</th>
+            <th>Quantity</th>
+            <th>Batch #</th>
+            <th>Inventory Input Date</th>
+          </tr>
+        </thead>
+        <tbody ng-repeat="block in blocks track by $index">
+          <tr>
+            <td data-label="Select">
+              <input type="radio" ng-model="$parent.selectedBlock" ng-value="$parent.blocks[$index]">
+            </td>
+            <td data-label="Product">{{block.productType.name}}</td>
+            <td data-label="Quantity">{{block.quantity + " " + block.units}}</td>
+            <td data-label="Batch #">&nbsp;{{block.blockNumber}}</td>
+            <td data-label="Add Date">{{block.dateCreated | date: 'short'}}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
   <div class="modal-footer">
@@ -73,78 +73,83 @@
     <h3 class="modal-title">Add Seafood Batch</h3>
   </div>
   <div class="modal-body">
+    <ul class="nav nav-tabs" ng-init="item=1">
+      <li ng-class="{active:item==1}"><a data-toggle="tab" ng-click="item=1" ng-href="">Product Info <span class="section-required" ng-show="productRequired || quantityRequired || unitsRequired"> * </span></a></li>
+      <li ng-class="{active:item==2}"><a data-toggle="tab" ng-click="item=2" ng-href="">Traceability Info <span class="section-required" ng-show="catchDateRequired"> * </span></a></li>
+    </ul>
+    <br>
     <form name="addBatchForm">
-      <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Product Type &nbsp;
-            <span ng-show="productRequired" class="input-required"> * Required</span></label>
-          <select class="form-control" name="selectedProduct" ng-model="selectedProduct" ng-options="product.name for product in products" required></select>
-          <small class="text-muted">Item must be added under Products tab.</small>
-        </div>
-        <div class="col-lg-6">
-          <label>Quantity &nbsp;
-            <span ng-show="quantityRequired" class="input-required"> * Required</span>
-          </label>
-          <input class="form-control" name="quantity" ng-model="quantity" type="text" min="1" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 3500" required></input>
-          <small class="text-muted">Please enter a numerical value.</small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Units &nbsp;
-            <span ng-show="unitsRequired" class="input-required"> * Required</label>
-          <select name="units" class="form-control" ng-model="units" required>
-            <option value="lbs">lbs</option>
-            <option value="half lbs">1/2 lbs</option>
-            <option value="kg">kg</option>
-          </select>
-          <small class="text-muted">Please choose between the three options.</small>
-        </div>
-        <div class="col-lg-6">
-          <label>Catch Date &nbsp;
-            <span ng-show="catchDateRequired" class="input-required"> * Required</label></label>
-          <input class="form-control" name="catchDate" ng-model="catchDate" type="date" placeholder="ex. 5/14/2016" required>
-          <small class="text-muted">YYYY-MM-DD</small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Catch Region</label>
-          <input class="form-control" ng-model="catchRegion" placeholder="ex. Gulf of St. Lawrence">
-          <small class="text-muted">Enter the Catch Location</small>
-        </div>
-        <div class="col-lg-6">
-          <label>Caught By</label>
-          <input class="form-control" ng-model="caughtBy" placeholder="ex. Joey Fisher">
-          <small class="text-muted">Enter in the fisherman/fishery</small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Catch Type</label>
-          <input class="form-control" ng-model="catchType" placeholder="ex. Gillnetting">
-          <small class="text-muted">Enter the method of catching.</small>
-        </div>
-        <div class="col-lg-6">
-          <label>Water Depth (Meters)</label>
-          <input class="form-control" ng-model="waterDepth" type="number" step="1" placeholder="ex. 500">
-          <small class="text-muted">Enter the water depth in meters.</small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Batch Number</label>
-          <input class="form-control" ng-model="blockNumber" type="text" step="1" placeholder="ex. A5432">
-          <small class="text-muted">[Optional] For custom batch numbers.</small>
-        </div>
-      </fieldset>
-      <!--<fieldset class="form-group">
-        <div class="col-lg-12">
-          <label>Job Number</label>
-          <input class="form-control" ng-model="jobNumber" type="number" placeholder="ex. 1738">
-          <small class="text-muted">[Optional] Enter in the job number</small>
-        </div>
-      </fieldset>-->
+
+      <div id="productInfo.html" ng-show="item==1">
+        <fieldset class="form-group">
+          <div class="col-lg-6">
+            <label>Product Type &nbsp;
+              <span ng-show="productRequired" class="input-required"> * Required</span>
+            </label>
+            <select class="form-control" name="selectedProduct" ng-model="selectedProduct" ng-options="product.name for product in products" required></select>
+            <small class="text-muted">Item must be added under Products tab.</small>
+          </div>
+          <div class="col-lg-6">
+            <label>Quantity &nbsp;
+              <span ng-show="quantityRequired" class="input-required"> * Required</span>
+            </label>
+            <input class="form-control" name="quantity" ng-model="quantity" type="text" min="1" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 3500" required></input>
+            <small class="text-muted">Please enter a numerical value.</small>
+          </div>
+        </fieldset>
+        <fieldset class="form-group">
+          <div class="col-lg-6">
+            <label>Units &nbsp;
+              <span ng-show="unitsRequired" class="input-required"> * Required</label>
+            <select name="units" class="form-control" ng-model="units" required>
+              <option value="lbs">lbs</option>
+              <option value="half lbs">1/2 lbs</option>
+              <option value="kg">kg</option>
+            </select>
+            <small class="text-muted">Please choose between the three options.</small>
+          </div>
+          <div class="col-lg-6">
+            <label>Batch Number</label>
+            <input class="form-control" ng-model="blockNumber" type="text" step="1" placeholder="ex. A5432">
+            <small class="text-muted">[Optional] For custom batch numbers.</small>
+          </div>
+        </fieldset>
+      </div>
+
+      <div id="auditInfo.html" ng-show="item==2">
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Catch Date &nbsp;
+              <span ng-show="catchDateRequired" class="input-required"> * Required</label>
+            </label>
+            <input class="form-control" name="catchDate" ng-model="catchDate" type="date" placeholder="ex. 5/14/2016" required>
+            <small class="text-muted">YYYY-MM-DD</small>
+          </div>
+          <div class="col-lg-4">
+            <label>Catch Region</label>
+            <input class="form-control" ng-model="catchRegion" placeholder="ex. Gulf of St. Lawrence">
+            <small class="text-muted">Enter the Catch Location</small>
+          </div>
+          <div class="col-lg-4">
+            <label>Water Depth (Meters)</label>
+            <input class="form-control" ng-model="waterDepth" type="number" step="1" placeholder="ex. 500">
+            <small class="text-muted">Enter the water depth in meters.</small>
+          </div>
+        </fieldset>
+        <fieldset class="form-group">
+          <div class="col-lg-6">
+            <label>Catch Type</label>
+            <input class="form-control" ng-model="catchType" placeholder="ex. Gillnetting">
+            <small class="text-muted">Enter the method of catching.</small>
+          </div>
+          <div class="col-lg-6">
+            <label>Caught By</label>
+            <input class="form-control" ng-model="caughtBy" placeholder="ex. Joey Fisher">
+            <small class="text-muted">Enter in the fisherman/fishery</small>
+          </div>
+        </fieldset>
+      </div>
+
     </form>
   </div>
   <div class="modal-footer">
@@ -287,63 +292,63 @@
     <h3 class="modal-title">Inventory Batch Details</h3>
   </div>
   <div class="modal-body">
-      <h4 class="text-center">Initial Catch Audit</h4>
-      <hr class="short">
-      <div class="table-responsive">
-        <table class="table tableWhite">
-          <thead>
-            <tr>
-              <th>Product Type</th>
-              <th>Quantity</th>
-              <th>Catch Date</th>
-              <th>Catch Region</th>
-              <th>Caught By</th>
-              <th>Catch Type</th>
-              <th>Water Depth</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td data-label="Product">{{block.productType.name}}</td>
-              <td data-label="Quantity">{{block.quantity + " " + block.units}}</td>
-              <td data-label="Catch Date">{{block.catchDate | date:"M/d/y"}}</td>
-              <td data-label="Region">{{block.catchRegion}}</td>
-              <td data-label="Catcher">{{block.caughtBy}}</td>
-              <td data-label="Method">{{block.catchType}}</td>
-              <td data-label="Depth">{{block.waterDepth}}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    <h4 class="text-center">Initial Catch Audit</h4>
+    <hr class="short">
+    <div class="table-responsive">
+      <table class="table tableWhite">
+        <thead>
+          <tr>
+            <th>Product Type</th>
+            <th>Quantity</th>
+            <th>Catch Date</th>
+            <th>Catch Region</th>
+            <th>Caught By</th>
+            <th>Catch Type</th>
+            <th>Water Depth</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td data-label="Product">{{block.productType.name}}</td>
+            <td data-label="Quantity">{{block.quantity + " " + block.units}}</td>
+            <td data-label="Catch Date">{{block.catchDate | date:"M/d/y"}}</td>
+            <td data-label="Region">{{block.catchRegion}}</td>
+            <td data-label="Catcher">{{block.caughtBy}}</td>
+            <td data-label="Method">{{block.catchType}}</td>
+            <td data-label="Depth">{{block.waterDepth}}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div class="modal-body">
-      <h4 class="text-center">Lot History</h4>
-      <hr class="short">
-      <div class="table-responsive">
-        <table class="table tableWhite">
-          <thead>
-            <tr>
-              <th>Operation</th>
-              <th>Date</th>
-              <th>Location</th>
-              <th>Quantity</th>
-              <th>Job Number</th>
-              <th>Process Type</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="event in history.events track by $index">
-              <td data-label="Operation">&nbsp;{{history.events[history.events.length-1-$index].operation}}</td>
-              <td data-label="Date">&nbsp;{{history.events[history.events.length-1-$index].date | date: "short"}}</td>
-              <td data-label="Location">&nbsp;{{getStageName([history.events.length-1-$index])}}</td>
-              <td data-label="Quantity">&nbsp;{{quantities[history.events.length-1-$index] + " " + units[history.events.length-1-$index]}}</td>
-              <td data-label="Job Number">&nbsp;{{history.events[history.events.length-1-$index].jobNumber}}</td>
-              <td data-label="Process Type">&nbsp;{{history.events[history.events.length-1-$index].processType}}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+  </div>
+  <div class="modal-body">
+    <h4 class="text-center">Lot History</h4>
+    <hr class="short">
+    <div class="table-responsive">
+      <table class="table tableWhite">
+        <thead>
+          <tr>
+            <th>Operation</th>
+            <th>Date</th>
+            <th>Location</th>
+            <th>Quantity</th>
+            <th>Job Number</th>
+            <th>Process Type</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="event in history.events track by $index">
+            <td data-label="Operation">&nbsp;{{history.events[history.events.length-1-$index].operation}}</td>
+            <td data-label="Date">&nbsp;{{history.events[history.events.length-1-$index].date | date: "short"}}</td>
+            <td data-label="Location">&nbsp;{{getStageName([history.events.length-1-$index])}}</td>
+            <td data-label="Quantity">&nbsp;{{quantities[history.events.length-1-$index] + " " + units[history.events.length-1-$index]}}</td>
+            <td data-label="Job Number">&nbsp;{{history.events[history.events.length-1-$index].jobNumber}}</td>
+            <td data-label="Process Type">&nbsp;{{history.events[history.events.length-1-$index].processType}}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
+  </div>
   </div>
   <div class="modal-footer">
     <button class="btn-status-default" type="button" ng-click="cancel()">Close</button>
