--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -51,7 +51,7 @@
     <h3 class="modal-title text-center">Add a Product</h3>
   </div>
   <div class="modal-body">
-    <form name="addProductForm">
+    <form name="addProductForm" ng-init="item=0">
       <fieldset class="form-group">
         <div class="col-lg-6">
           <label>Product Name &nbsp;
@@ -66,6 +66,24 @@
              <small class="text-muted">PNG and JPG files only</small>
           <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
           </div>
+        </div>
+      </fieldset>
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>Finished Good Type</label>
+          <div class ="input-wrapper">
+             <input class="form-control" type="text" ng-model="finishedGood" name="finishedGood" placeholder="ex. Smoked"></input>
+             <button class="btn-status-danger" ng-click="item=1">+</button>
+           </div>
+             <small class="text-muted">Please enter the finished good type</small>
+        </div>
+        <div class="col-lg-6" ng-show="item==1">
+          <label>Finished Good Type</label>
+          <div class ="input-wrapper">
+             <input class="form-control" type="text" ng-model="finishedGood2" name="finishedGood2" placeholder="ex. Canned"></input>
+             <button class="btn-status-danger">+</button>
+           </div>
+             <small class="text-muted">Please enter the finished good type</small>
         </div>
       </fieldset>
       <fieldset class="form-group">
