--- a/src/views/dashboard.settings.fishery.html
+++ b/src/views/dashboard.settings.fishery.html
@@ -123,25 +123,37 @@
 
                         <fieldset class="form-group">
                           <div class="row">
-                          <div class="col-lg-3">
-                            <label>Fishery Logo</label>
-                          </div>
-                          <div class="col-lg-9">
-                            <input class="form-control" type="file" ngf-select ng-model="file" name="file">
+                            <div class="col-lg-3">
+                              <label>Fishery Logo</label>
+                            </div>
+                            <div class="col-lg-9">
+                              <input class="form-control" type="file" ngf-select ng-model="file" name="file">
                               <small class="text-muted">PNG and JPG files only</small>
-                            <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}"></div>
-                          </div>
-                          <!-- <div class="col-lg-3"> -->
-                              <!-- <button ng-disabled="false" ng-click="saveChanges()" class="btn-status-default">Upload</button> -->
+                              <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}"></div>
+                            </div>
                         </fieldset>
-
-
+                        </div>
                       </div>
-                    </div>
-                    <div align="right" class="panel-setting">
-                    <button ng-disabled="isSubmitButtonDisabled() || isDisabled" ng-click="saveChanges()" class="btn-status-success">Save Changes</button>
-                  </div>
+                      <div class="col-lg-12">
+                        <fieldset class="form-group">
+                          <div class="row">
+                              <label>Invoice Purchase Disclaimer</label>
+                              <textarea class="form-control" type="text" name="disclaimer" ng-model="disclaimer"
+                              placeholder="ex. TERMS: Due to the nature of seafood, please check your order immediately.
+                              1. All quality problems must be reported to your sales rep within 12 hours.
+                              2. Any short shipments must be marked on carrier's waybill or if delivered by our truck on the delivery copy of the invoice.
+                              3. Any shrink or mortality in excess of allowable amounts must be reported within 12 hours.
+                              4. Do not dispose of disputed stock without written approval of sales rep.
+                              5. Interest will be charged on past due invoices at the rate of 2% per month (24% per year)."></textarea>
+                              <small class="text-muted">Please enter the disclaimer to be displayed on your invoice</small>
+                        </fieldset>
+                        </div>
+                        <div align="right" class="panel-setting">
+                          <button ng-disabled="isSubmitButtonDisabled() || isDisabled" ng-click="saveChanges()" class="btn-status-success">Save Changes</button>
+                        </div>
                   </form>
+                  </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -149,5 +161,3 @@
         </div>
       </div>
     </div>
-  </div>
-</div>
