mobile table redesign

--- a/src/css/components/_table.scss
+++ b/src/css/components/_table.scss
@@ -49,6 +49,16 @@ table.tableWhite {
   .table>tbody>tr>td,
   .table>tbody>tr>th {
     background-color: #fff;
+    border-bottom: none;
+    border: 0.15em solid $primary-border-color;
+  }
+  .table>tbody>tr>td:first-child {
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+  }
+  .table>tbody>tr>td:last-child {
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
   }
 
 
