--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12">
+<div class="col-lg-12 col-centered">
   <h2 class="page-header light-text text-center"></h2>
   <div class="row placeholders">
     <div class="container">
