--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -69,22 +69,21 @@
         </div>
       </fieldset>
       <fieldset class="form-group">
-        <div class="col-lg-6">
+        <div class="col-lg-6 col-lg-offset-6">
           <label>Finished Good Type</label>
           <div class ="input-wrapper">
              <input class="form-control" type="text" ng-model="finishedGood" name="finishedGood" placeholder="ex. Smoked"></input>
-             <button class="btn-status-danger" ng-click="item=1">+</button>
+             <button class="btn-status-danger" ng-click="item=1"><i class="fa fa-plus"></i></button>
            </div>
              <small class="text-muted">Please enter the finished good type</small>
         </div>
-        <div class="col-lg-6" ng-show="item==1">
-          <label>Finished Good Type</label>
+        <!-- <div class="col-lg-6 col-lg-offset-6" ng-show="item==1">
           <div class ="input-wrapper">
-             <input class="form-control" type="text" ng-model="finishedGood2" name="finishedGood2" placeholder="ex. Canned"></input>
-             <button class="btn-status-danger">+</button>
+             <input class="form-control" type="text" ng-model="finishedGood" name="finishedGood" placeholder="ex. Smoked"></input>
+             <button class="btn-status-danger" ng-click="item=1"><i class="fa fa-minus"></i></button>
            </div>
              <small class="text-muted">Please enter the finished good type</small>
-        </div>
+        </div> -->
       </fieldset>
       <fieldset class="form-group">
         <div class="col-lg-12">
@@ -114,6 +113,61 @@
       <fieldset class="form-group">
         <div class="col-lg-6">
           <label>Product Name</label>
+          <input class="form-control" ng-model="name" maxlength="25" placeholder="ex. Atlantic Cod">
+          <small class="text-muted">Maximum 25 characters.</small>
+        </div>
+        <div class="col-lg-6">
+          <label>Unit Price</label>
+          <input class="form-control" ng-model="unitPrice" step="0.01" type="number" placeholder="ex. 4.50">
+          <small class="text-muted">Enter in $XX.xx format</small>
+        </div>
+      </fieldset>
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>Units</label>
+          <br>
+          <select ng-model="unit" name="mydropdown" class="form-control">
+            <option value="lb">Pounds (Lbs.)</option>
+            <option value="kg">Kilograms (Kgs.)</option>
+            <option value="unit">Per Unit of Fish</option>
+          </select>
+        </div>
+        <div class="col-lg-6">
+          <label>Attach Product Photo</label>
+          <input class="form-control" type="file" ngf-select ng-model="file" name="file">
+          <small class="text-muted">PNG and JPG files ONLY!</small>
+        </div>
+        <button ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
+        </button>
+      </fieldset>
+      <fieldset class="form-group">
+        <div class="col-lg-12">
+          <label>Description</label>
+          <input class="form-control" ng-model="description" maxlength="60" placeholder="Enter a short product description">
+          <small class="text-muted">Maximum 60 characters</small>
+        </div>
+      </fieldset>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <div class="alignright">
+      <button type="submit" class="btn-status-success" ng-click="ok()">Submit</button>
+      <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
+    </div>
+  </div>
+</script>
+
+
+<!-- ADD FINISHED GOOD MODAL-->
+<script type="text/ng-template" id="addFinishedGoodModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title text-center">Add Finished Good</h3>
+  </div>
+  <div class="modal-body">
+    <form>
+      <fieldset class="form-group">
+        <div class="col-lg-6">
+          <label>UPC Code</label>
           <input class="form-control" ng-model="name" maxlength="25" placeholder="ex. Atlantic Cod">
           <small class="text-muted">Maximum 25 characters.</small>
         </div>
