--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -2,17 +2,17 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <button type="button" class="navbar-toggle collapsed" ng-click="isCollapsed = !isCollapsed">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" ng-model="fisheryName" ui-sref=".default.overview">
-          <img src="https://s3.amazonaws.com/coastline-us/coastline-logo.png" alt="coastline  logo"> {{fisheryName}}
+          <img src="https://s3.amazonaws.com/coastline-us/coastline-logo.png" alt="coastline logo"> {{fisheryName}}
         </a>
       </div>
-      <div id="navbar" class="navbar-collapse collapse">
+      <div id="navbar" class="navbar-collapse collapse" collapse="isCollapsed">
         <ul class="nav navbar-nav nav-pills navbar-right">
           <li class="hide"><a ui-sref=".default.products">Products</a></li>
           <li class="hide"><a ui-sref=".default.supply-chain.menu">Supply Chain</a></li>
