--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -12,7 +12,7 @@
           <img src="https://s3.amazonaws.com/coastline-us/coastline-logo.png" alt="coastline logo"> {{fisheryName}}
         </a>
       </div>
-      <div id="navbar" class="navbar-collapse collapse" collapse="isCollapsed">
+      <div id="navbar" class="navbar-collapse collapse" ng-init="isCollapsed=true" uib-collapse="isCollapsed">
         <ul class="nav navbar-nav nav-pills navbar-right">
           <li class="hide"><a ui-sref=".default.overview">Overview</a></li>
           <li class="hide"><a ui-sref=".default.products">Products</a></li>
