--- a/src/views/login.html
+++ b/src/views/login.html
@@ -23,10 +23,10 @@
               <br>
               <fieldset>
                 <div class="form-group">
-                  <input type="username" class="form-control" id="username" ng-model="username" name="username" placeholder="Username or Email" autofocus required='true'>
+                  <input type="username" class="form-control" id="username" ng-model="username" name="username" placeholder="Username or Email" autofocus>
                 </div>
                 <div class="form-group">
-                  <input type="password" class="form-control" id="pwd" ng-model="password" name="password" placeholder="Password" required='true'>
+                  <input type="password" class="form-control" id="pwd" ng-model="password" name="password" placeholder="Password">
                   <center>
                     <small><a ui-sref="forgot-password">Forgot your password?</a></small>
                   </center>
