--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -14,7 +14,7 @@
             </div>
             <div class="panel panel-body">
               <!--<div class="panel-scroll">-->
-              <div class="table-responsive">
+              <div class="table-responsive table-card-responsive">
                 <table class="table tableWhite">
                   <thead>
                     <tr>
