--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -16,7 +16,7 @@
         <div class="panel-container">
           <div class="panel panel-default">
             <div class="panel-body">
-              <div class="table-responsive">
+              <div class="table-responsive table-card-responsive">
                 <table class="table tableWhite">
                   <thead>
                     <tr>
