--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -20,6 +20,8 @@
           <li class="hide"><a ui-sref=".default.inventory.menu">Inventory</a></li>
           <li class="hide"><a ui-sref=".default.sales-management.track">Sales</a></li>
           <li class="hide"><a ui-sref=".default.orders.menu">Orders</a></li>
+          <li class="hide"><a ui-sref=".default.customers.menu">Customers</a></li>
+
           <li><a ui-sref=".settings.general">Settings</a></li>
           <li><a ui-sref=".help">Help</a></li>
           <li><a ng-click="logout()" href="#">Logout</a></li>
