--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -149,3 +149,33 @@ a.btn-size-large:active,
 a.btn-size-large:focus {
   text-decoration: none;
 }
+
+.btn-table-success {
+  @include border-radius(2px);
+  color: $secondary-background-color;
+  border-style: none;
+  background-color: $btn-success-color;
+  border-color: $btn-success-color;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: -5px;
+  margin-bottom: -5px;
+  margin-right: -5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  outline: none;}
+
+  .btn-table-danger {
+    @include border-radius(2px);
+    color: $secondary-background-color;
+    border-style: none;
+    background-color: $btn-danger-color;
+    border-color: $btn-danger-color;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: -5px;
+    margin-bottom: -5px;
+    margin-right: -5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    outline: none;}
