--- a/src/css/components/_table.scss
+++ b/src/css/components/_table.scss
@@ -1,6 +1,6 @@
 table {
   border-collapse: separate;
-  border: 0.18em solid $secondary-border-color;
+  border: 1px solid $secondary-border-color;
   display: table;
   border-collapse: separate;
   border-spacing: 0;
@@ -9,18 +9,20 @@ table {
 table.tableWhite {
   background: none;
   border-radius: 2px;
-
   th {
     background-color: $primary-background-color;
     vertical-align: middle;
-    border-radius: 0px;
+    border-radius: 0;
   }
-
   td {
     vertical-align: bottom;
-    background-color: #f3f3f3;
+    background-color: #fff;
   }
 }
+
+// .table>tbody>tr:first-child>td{
+//   border-top: none;
+// }
 .table>tbody>tr>td,
 .table>tbody>tr>th,
 .table>tfoot>tr>td,
@@ -30,61 +32,66 @@ table.tableWhite {
   vertical-align: middle;
   text-align: center;
 }
-
-.panel>.table-responsive:last-child>.table:last-child, .panel>.table:last-child,
-.panel>.table-responsive:first-child>.table:first-child, .panel>.table:first-child {
+.panel>.table-responsive:last-child>.table:last-child,
+.panel>.table:last-child,
+.panel>.table-responsive:first-child>.table:first-child,
+.panel>.table:first-child {
   border-radius: 5px;
 }
-
 @media screen and (max-width: 768px) {
-  .table>tbody>tr>td,
-  .table>tbody>tr>th,
-  .table>tfoot>tr>td,
-  .table>tfoot>tr>th,
-  .table>thead>tr>td,
-  .table>thead>tr>th {
-    vertical-align: middle;
-    text-align: right;
-   }
-  .table>tbody>tr>td,
-  .table>tbody>tr>th {
-    background-color: #fff;
-    border-bottom: none;
-    border: 0.15em solid $primary-border-color;
-  }
-  .table>tbody>tr>td:first-child {
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
-  }
-  .table>tbody>tr>td:last-child {
-    border-bottom-left-radius: 2px;
-    border-bottom-right-radius: 2px;
-  }
-
-
-  .table-responsive {
+  .table-card-responsive {
     border: hidden;
-  }
-  table {
-    border: 2px solid $secondary-background-color;
-  }
+    .table>tbody>tr>td,
+    .table>tbody>tr>th,
+    .table>tfoot>tr>td,
+    .table>tfoot>tr>th,
+    .table>thead>tr>td,
+    .table>thead>tr>th {
+      vertical-align: middle;
+      text-align: right;
+    }
+    .table>tbody>tr>td,
+    .table>tbody>tr>th {
+      background-color: #fff;
+      border-bottom: none;
 
-  table thead {
-    display: none;
+      // border-top: none;
+      border: 0.15em solid $primary-border-color;
+    }
+    .table>tbody>tr>td:first-child {
+      border-top-left-radius: 2px;
+      border-top-right-radius: 2px;
+    }
+    .table>tbody>tr>td:last-child {
+      border-bottom-left-radius: 2px;
+      border-bottom-right-radius: 2px;
+    }
+    .table-responsive {
+      border: hidden;
+    }
+    table {
+      border: 2px solid $secondary-background-color;
+    }
+    table thead {
+      display: none;
+    }
+    table tr {
+      margin-bottom: 10px;
+      display: block;
+    }
+    table td {
+      content: attr(data-label);
+      display: block;
+      font-size: 13px;
+    }
+    table td:before {
+      content: attr(data-label);
+      font-weight: bold;
+      vertical-align: middle;
+      float: left;
+    }
   }
-  table tr {
-    margin-bottom: 10px;
-    display: block;
-  }
-  table td {
-    content: attr(data-label);
-    display: block;
-    font-size: 13px;
-  }
-  table td:before {
-    content: attr(data-label);
-    font-weight: bold;
-    vertical-align: middle;
-    float: left;
-  }
+}
+table.table-button-wrapper td {
+  background-color: #000;
 }
