--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -21,7 +21,7 @@
             </div>
             <div class="panel panel-body">
               <!--<div class="panel-scroll">-->
-              <div class="table-responsive">
+              <div class="table-responsive table-card-responsive">
                 <table class="table tableWhite">
                   <thead>
                     <tr>
@@ -235,7 +235,7 @@
 
 
       <hr class="short">
-      <div class="table-responsive">
+      <div class="table-responsive table-card-responsive">
         <table class="table tableWhite">
           <thead>
             <tr>
