--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -12,7 +12,7 @@
               <div class="col-lg-6">
                 <h3>Overdue payments</h3>
                 <hr class="short">
-                <div class="table-responsive">
+                <div class="table-responsive table-card-responsive">
                   <table class="table tableWhite">
                     <thead>
                       <tr>
@@ -38,7 +38,7 @@
               <div class="col-lg-6">
                 <h3>Payments Due in One Week</h3>
                 <hr class="short">
-                <div class="table-responsive">
+                <div class="table-responsive table-card-responsive">
                   <table class="table tableWhite">
                     <thead>
                       <tr>
