--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -15,7 +15,7 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <div class="table-responsive table-card-responsive">
-                  <h4> Sourced Products (ex. Raw)</h3>
+                  <h4> Sourced Products (ex. Raw)</h4>
                     <br>
                     <table class="table tableWhite">
                       <thead>
@@ -43,7 +43,7 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <div class="table-responsive table-card-responsive">
-                  <h4> Finished Products (ex. Smoked, Filetted)</h3>
+                  <h4> Finished Products (ex. Smoked, Filletted)</h4>
                     <br>
                     <table class="table tableWhite">
                       <thead>
