--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -57,7 +57,7 @@
 
 
 
-<!-- MANUAL ORDER INPUT MODAL-->
+<!-- MANUAL CUSTOMER INPUT MODAL-->
 <script type="text/ng-template" id="addCustomerModal.html">
   <div class="modal-header">
     <h3 class="modal-title text-center">Add a Customer</h3>
