--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -133,7 +133,7 @@
     <form name="addOrderForm" ng-init="item=1">
       <div id="customerInfo.html" ng-show="item==1">
         <fieldset class="form-group">
-          <div class="col-lg-6">
+          <div class="col-lg-4">
             <label>Customer Name &nbsp;
               <span class="input-required" ng-show="nameRequired"> * Required</span>
             </label>
@@ -141,12 +141,18 @@
             <small class="text-muted">Maximum 30 characters</small>
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-4">
+            <label>Company</label>
+            <input class="form-control" ng-model="company" type="text" placeholder="ex. Whole Foods" name="company">
+          </div>
+
+          <div class="col-lg-4">
             <label>Email &nbsp;
               <span class="input-required" ng-show="emailRequired"> * Required</span>
             </label>
             <input class="form-control" ng-model="email" placeholder="ex. fish@coastline.com" name="email" required>
           </div>
+
         </fieldset>
         <fieldset class="form-group">
           <div class="col-lg-4">
@@ -156,9 +162,38 @@
             <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
             <small class="text-muted">No spaces or dashes</small>
           </div>
-          <div class="col-lg-8">
+
+          <div class="col-lg-4">
+            <label>Street/Avenue</label>
+            <input class="form-control" ng-model="address" type="text" placeholder="ex. 16737 84th Avenue" name="address">
+          </div>
+          <div class="col-lg-4">
+            <label>City</label>
+            <input class="form-control" ng-model="city" type="text" placeholder="ex. White Rock" name="city">
+          </div>
+        </fieldset>
+
+
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Postal/ZIP Code</label>
+            <input class="form-control" ng-model="postalCode" type="text" placeholder="ex. V3R13R" name="postalCode">
+            <small class="text-muted">No spaces or dashes</small>
+          </div>
+          <div class="col-lg-4">
+            <label>Country</label>
+            <select class="form-control" name="country" type="text" ng-model="country" placeholder="ex. 14484 123 Ave Surrey" required>
+              <option value="CAN">Canada</option>
+              <option value="US">United States</option>
+              <option value="CHN">China</option>
+              <option value="JPN">Japan</option>
+              <option value="KOR">South Korea</option>
+              <option value="AUS">Australia</option>
+            </select>
+          </div>
+          <div class="col-lg-4">
             <label>Notes</label>
-            <textarea class="form-control" ng-model="note" type="text" placeholder="ex. Deliver to back door" name="note"></textarea>
+            <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
           </div>
         </fieldset>
       </div>
