--- a/src/views/dashboard.default.orders.invoice.html
+++ b/src/views/dashboard.default.orders.invoice.html
@@ -133,6 +133,7 @@
           <thead>
             <tr>
               <th>Product</th>
+              <th>Finished Good</th>
               <th>Batch (M/D/Y)</th>
               <th>Unit Price</th>
               <th>Units</th>
@@ -143,14 +144,19 @@
           <tbody>
             <tr ng-repeat="item in items track by $index">
               <td data-label="Product">{{item.product.name}}</td>
+              <td>&nbsp;</td>
               <td data-label="Data">{{item.block.displayData || item.block.catchDate}}</td>
               <td data-label="Unit Price $">{{item.unitPrice}}</td>
               <td data-label="Units">{{item.units}}</td>
               <td data-label="Quantity">{{item.quantity}}</td>
             </tr>
             <tr>
+              <td data-label="Sourced Product">
+                <select class="form-control" ng-model="selectedSourcedProduct" ng-options="sourcedProduct.name for sourcedProduct in sourcedProducts"></select>
+              </td>
+
               <td data-label="Product">
-                <select class="form-control" ng-model="selectedProduct" ng-options="product.name for product in products"></select>
+                <select class="form-control" ng-model="selectedFinishedProduct" ng-options="finishedProduct.name for finishedProduct in finishedProducts" ng-disabled="!selectedSourcedProduct"></select>
               </td>
 
               <td data-label="Choose Batch">
