login mobile center fix

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-5 col-centered">
-        <div class="panel-login panel panel-default">
+        <div class="panel-login panel panel-default col-centered">
           <div class="panel-heading">
             <h4 class="panel-title"></h4>
           </div>
