--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -47,12 +47,12 @@
                   </tbody>
                 </table>
               </div>
-              <ul class="pagination pagination-md" ng-init="item=1">
+              <!-- <ul class="pagination pagination-md" ng-init="item=1">
                 <li ng-class="{active:item==1}"><a ng-click="item=1">1</a></li>
                 <li ng-class="{active:item==2}"><a ng-click="item=2" href="">2</a></li>
                 <li ng-class="{active:item==3}"><a ng-click="item=3" href="">3</a></li>
                 <li ng-class="{active:item==4}"><a ng-click="item=4" href="">4</a></li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </div>
