--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -7,8 +7,8 @@
           <div class="panel-container">
             <div class="panel panel-default">
               <div class="panel-body">
-                <button ng-click="addSellingPoint()" class="btn-status-success">Add Sales Channel</button>
-                <button ng-click="editSellingPoint()" class="btn-status-default">Edit Sales Channel</button>
+                <button ng-click="addSellingPoint()" class="btn-status-success">Add</button>
+                <button ng-click="editSellingPoint()" class="btn-status-default">Edit</button>
                 <button ng-click="viewBlocks()" class="btn-status-default">View Inventory in Sales</button>
               </div>
             </div>
