view details fix

--- a/src/css/components/_modal.scss
+++ b/src/css/components/_modal.scss
@@ -12,3 +12,17 @@
 div.modal-text {
   width: 80%;
 }
+
+.modal-detail-container {
+  padding-left: 20px;
+  padding-right: 20px;
+
+  span {
+    letter-spacing: 1px;
+
+  }
+
+  h4 {
+    font-size: 16px;
+  }
+}
