--- a/src/views/dashboard.settings.users.html
+++ b/src/views/dashboard.settings.users.html
@@ -56,7 +56,7 @@
     <form>
       <fieldset class="form-group">
         <label>Email Address</label>
-        <input class="form-control" ng-model="email" maxlength="25" placeholder="i.e. coastline@fish.com">
+        <input class="form-control" ng-model="email" placeholder="i.e. coastline@fish.com">
       </fieldset>
       <fieldset class="form-group">
           <label>Account Type</label>
