--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -9,7 +9,7 @@
               <div class="panel-body alignleft">
                 <button ng-click="addOrder()" class="btn-status-success">Add</button>
                 <button ng-click="deleteOrder()" class="btn-status-danger">Delete</button>
-                <!-- <button ng-click="editOrder()" class="btn-status-default">Edit Order</button> -->
+                <button ng-click="editOrder()" class="btn-status-default">Edit</button>
                 <!-- <button ng-click="viewOrderDetail(selectedOrder)" class="btn-status-default">View Details</button> -->
                 <button ng-hide="isLoadingPDF" ng-click="viewOrderDetail(selectedOrder)" class="btn-status-default"><i class="fa fa-file-pdf-o"></i> PDF</button>
                 <button ng-show="isLoadingPDF" class="btn-status-success">Loading...</button>
@@ -104,7 +104,7 @@
             <td><b>Total</b></td>
             <td></td>
             <td></td>
-            <td>${{getTotal()}}</td>
+            <!-- <td>${{getTotal()}}</td> -->
           </tr>
         </tbody>
       </table>
@@ -178,7 +178,6 @@
           <div class="col-lg-4">
             <label>Postal/ZIP Code</label>
             <input class="form-control" ng-model="postalCode" type="text" placeholder="ex. V3R13R" name="postalCode">
-            <small class="text-muted">No spaces or dashes</small>
           </div>
           <div class="col-lg-4">
             <label>Country</label>
@@ -192,10 +191,16 @@
             </select>
           </div>
           <div class="col-lg-4">
-            <label>Notes</label>
-            <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
+            <label>State/Province &nbsp;<span ng-show="stateRequired" class="input-required"> * Required</span></label>
+            <input class="form-control" name="state"  type="text" ng-model="state" placeholder="ex. Michigan" required>
+            <!-- <small class="text-muted">Maximum 30 characters</small> -->
           </div>
+
         </fieldset>
+        <fieldset>          <div class="col-lg-12">
+                    <label>Notes</label>
+                    <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
+                </div></fieldset>
       </div>
 
 
@@ -261,8 +266,8 @@
             <input class="form-control" type="number" min="0" max="99999" ng-model="deliveryCharge" placeholder="ex. 40">
           </div>
           <div class="col-lg-4">
-            <label>Delivery Tax</label>
-            <input class="form-control" type="number" min="0" max="99999" ng-model="deliveryTax" placeholder="ex. 10">
+            <label>Delivery Tax (%)</label>
+            <input class="form-control" type="number" min="0" max="99999" ng-model="deliveryChargeTaxRate" placeholder="ex. 10">
           </div>
         </fieldset>
 
@@ -277,9 +282,8 @@
               <th>Product</th>
               <th>Finished Good</th>
               <th>Batch</th>
-              <th>Unit Price</th>
-              <th>Units</th>
-              <th>Quantity (Max: {{selectedBlock.quantity + selectedBlock.units}})</th>
+              <th>Unit Price<br>($/{{selectedBlock.units}})</th>
+              <th>Quantity<br>(Max: {{selectedBlock.quantity + " " + selectedBlock.units}})</th>
               <th>Tax Rate (%)</th>
               <th>&nbsp;
                 <span class="input-required" ng-show="tableRequired"> *</span>&nbsp;</th>
@@ -291,7 +295,6 @@
               <td>&nbsp;</td>
               <td data-label="Data">{{item.block.catchDate | date: "M/d/y"}}, {{item.block.stage.name}}</td>
               <td data-label="Unit Price $">{{item.unitPrice}}</td>
-              <td data-label="Units">{{item.units}}</td>
               <td data-label="Quantity">{{item.quantity}}</td>
               <td data-label="Tax Rate">{{item.taxRate}}</td>
               <td data-label="Remove">
@@ -314,14 +317,6 @@
 
               <td data-label="Unit Price">
                 <input type="number" min="0" ng-model="unitPrice" step="0.01" class="form-control" placeholder="ex. 12.99" name="price" required></input>
-              </td>
-
-              <td data-label="Units">
-                <select ng-model="units" class="form-control" name="units" required>
-                  <option value="lbs">lbs</option>
-                  <option value="half lbs">1/2 lbs</option>
-                  <option value="kg">kg</option>
-                </select>
               </td>
 
               <td data-label="Quantity">
@@ -353,6 +348,177 @@
   </div>
 </script>
 
+<!-- MANUAL ORDER INPUT MODAL-->
+<script type="text/ng-template" id="editOrderModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title text-center">Edit Invoice</h3>
+  </div>
+  <div class="modal-body">
+    <ul class="nav nav-tabs">
+      <li ng-class="{active:item==1}"><a data-toggle="tab" ng-click="item=1" ng-href="">Customer Information &nbsp;
+        <span class="section-required" ng-show="nameRequired || emailRequired || phoneRequired"> * </span></a></li>
+      <li ng-class="{active:item==2}"><a data-toggle="tab" ng-click="item=2" ng-href="">Payment Information &nbsp;
+        <span class="section-required" ng-show="invoiceNumber || paymentRequired || statusRequired || dateRequired || creditRequired"> * </span></a></li>
+    </ul>
+    <br>
+    <form name="addOrderForm" ng-init="item=1">
+      <div id="customerInfo.html" ng-show="item==1">
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Customer Name &nbsp;
+              <span class="input-required" ng-show="nameRequired"> * Required</span>
+            </label>
+            <input class="form-control" type="text" maxlength="30" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
+            <small class="text-muted">Maximum 30 characters</small>
+          </div>
+
+          <div class="col-lg-4">
+            <label>Company</label>
+            <input class="form-control" ng-model="company" type="text" placeholder="ex. Whole Foods" name="company">
+          </div>
+
+          <div class="col-lg-4">
+            <label>Email &nbsp;
+              <span class="input-required" ng-show="emailRequired"> * Required</span>
+            </label>
+            <input class="form-control" ng-model="email" placeholder="ex. fish@coastline.com" name="email" required>
+          </div>
+
+        </fieldset>
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Phone Number &nbsp;
+              <span class="input-required" ng-show="phoneRequired"> * Required</span>
+            </label>
+            <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required>
+            <small class="text-muted">No spaces or dashes</small>
+          </div>
+
+          <div class="col-lg-4">
+            <label>Street/Avenue</label>
+            <input class="form-control" ng-model="address" type="text" placeholder="ex. 16737 84th Avenue" name="address">
+          </div>
+          <div class="col-lg-4">
+            <label>City</label>
+            <input class="form-control" ng-model="city" type="text" placeholder="ex. White Rock" name="city">
+          </div>
+        </fieldset>
+
+
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Postal/ZIP Code</label>
+            <input class="form-control" ng-model="postalCode" type="text" placeholder="ex. V3R13R" name="postalCode">
+          </div>
+          <div class="col-lg-4">
+            <label>Country</label>
+            <select class="form-control" name="country" type="text" ng-model="country" placeholder="ex. 14484 123 Ave Surrey" required>
+              <option value="CAN">Canada</option>
+              <option value="US">United States</option>
+              <option value="CHN">China</option>
+              <option value="JPN">Japan</option>
+              <option value="KOR">South Korea</option>
+              <option value="AUS">Australia</option>
+            </select>
+          </div>
+          <div class="col-lg-4">
+            <label>State/Province &nbsp;<span ng-show="stateRequired" class="input-required"> * Required</span></label>
+            <input class="form-control" name="state"  type="text" ng-model="state" placeholder="ex. Michigan" required>
+            <!-- <small class="text-muted">Maximum 30 characters</small> -->
+          </div>
+
+        </fieldset>
+        <fieldset>          <div class="col-lg-12">
+                    <label>Notes</label>
+                    <textarea class="form-control" ng-model="notes" type="text" placeholder="ex. Deliver to back door" name="notes"></textarea>
+                </div></fieldset>
+      </div>
+
+
+      <div id="paymentInfo.html" ng-show="item==2">
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Invoice Number &nbsp;
+              <span class="input-required" ng-show="invoiceRequired"> * Required</span>
+            </label>
+            <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
+            <small class="text-muted">Maximum 10 characters</small>
+          </div>
+          <div class="col-lg-4">
+            <label>Payment Method &nbsp;
+              <span class="input-required" ng-show="paymentRequired"> * Required</span>
+            </label>
+            <select ng-model="paymentMethod" class="form-control" name="payment" required>
+              <option value="Cash">Cash</option>
+              <option value="Cheque">Cheque</option>
+              <option value="Credit">Credit</option>
+              <option value="Debit">Debit</option>
+            </select>
+          </div>
+          <div class="col-lg-4">
+            <label>Status &nbsp;
+              <span class="input-required" ng-show="statusRequired"> * Required</span>
+            </label>
+            <select ng-model="status" class="form-control" name="status" required>
+              <option value="pending">Pending</option>
+              <option value="delivered">Delivered</option>
+              <option value="paid">Paid</option>
+              <option value="cancelled">Cancelled</option>
+              <option value="refunded">Refunded</option>
+            </select>
+          </div>
+        </fieldset>
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Invoice Date &nbsp;
+              <span class="input-required" ng-show="dateRequired"> * Required</span>
+            </label>
+            <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016/01/14" name="date" required>
+            <small class="text-muted">YYYY-MM-DD</small>
+          </div>
+          <div class="col-lg-4">
+            <label>Credit Terms (in Days) &nbsp;
+              <span class="input-required" ng-show="creditRequired"> * Required</span>
+            </label>
+            <input class="form-control" type="number" min="0" max="99999" ng-model="creditTerms" placeholder="ex. 12" name="credit" required>
+          </div>
+          <div class="col-lg-4">
+            <label>Currency</label>
+            <select ng-model="currency" class="form-control">
+              <option value="USD">USD</option>
+              <option value="CAD">CAD</option>
+              <option value="Euro">Euro</option>
+            </select>
+          </div>
+        </fieldset>
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Delivery Charge</label>
+            <input class="form-control" type="number" min="0" max="99999" ng-model="deliveryCharge" placeholder="ex. 40">
+          </div>
+          <div class="col-lg-4">
+            <label>Delivery Tax (%)</label>
+            <input class="form-control" type="number" min="0" max="99999" ng-model="deliveryChargeTaxRate" placeholder="ex. 10">
+          </div>
+        </fieldset>
+
+      </div>
+
+
+
+    </form>
+  </div>
+  </form>
+  </div>
+  <div class="modal-footer">
+    <div class="alignright">
+      <!-- <button class="btn-status-default" type="button" ng-click="loadCustomer()"><i class="fa fa-group"></i> Existing Customer</button> -->
+      <button type="submit" class="btn-status-success" ng-click="ok()">Submit</button>
+      <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
+    </div>
+  </div>
+</script>
+
 <!-- FILTER ORDERS MODAL-->
 <script type="text/ng-template" id="views/modals/order-filter.html">
   <div class="modal-header">
@@ -363,17 +529,20 @@
       <fieldset class="form-group">
         <div class="col-lg-6">
           <label>Customer Name</label>
-          <input class="form-control" type="text" maxlength="30" ng-model="customerName" placeholder="ex. John Doe">
-          <small class="text-muted">[Optional] Maximum 30 characters</small>
+          <input class="form-control" type="text" ng-model="customerName" placeholder="ex. John Doe">
         </div>
         <div class="col-lg-6">
-          <label>Invoice Number</label>
-          <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
-          <small class="text-muted">[Optional] Order Invoice </small>
+          <label>Company Name</label>
+          <input class="form-control" type="text" ng-model="company" placeholder="ex. Fish Co.">
         </div>
+
       </fieldset>
       <fieldset class="form-group">
-        <div class="col-lg-6">
+          <div class="col-lg-4">
+            <label>Invoice Number</label>
+            <input class="form-control" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937"></input>
+          </div>
+        <div class="col-lg-4">
           <label>Payment Method</label>
           <select ng-model="paymentMethod" class="form-control">
             <option value="Cash">Cash</option>
@@ -381,9 +550,8 @@
             <option value="Credit">Credit</option>
             <option value="Debit">Debit</option>
           </select>
-          <small class="text-muted">Choose from the dropdown list</small>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-4">
           <label>Status</label>
           <select ng-model="status" class="form-control">
             <option value="pending">Pending</option>
@@ -392,19 +560,17 @@
             <option value="cancelled">Cancelled</option>
             <option value="refunded">Refunded</option>
           </select>
-          <small class="text-muted">Choose from the dropdown list</small>
         </div>
+
       </fieldset>
       <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Date Range - From:</label>
-          <input class="form-control" type="date" ng-model="dateStart" placeholder="2016-01-12">
-          <small class="text-muted">Filter Range (Beginning Date)</small>
-        </div>
+          <div class="col-lg-6">
+            <label>Date Range - From:</label>
+            <input class="form-control" type="date" ng-model="dateStart" placeholder="2016-01-12">
+          </div>
         <div class="col-lg-6">
           <label>Date Range - To:</label>
           <input class="form-control" type="date" ng-model="dateEnd" placeholder="2016-01-14">
-          <small class="text-muted">Filter Range (End Date)</small>
         </div>
       </fieldset>
 
