--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -89,7 +89,7 @@
 
 
       </fieldset>
-      <fieldset class="form-group">
+      <!-- <fieldset class="form-group">
         <div class="col-lg-6">
           <label>Attach Product Photo</label>
           <input class="form-control" type="file" ngf-select ng-model="file" name="file">
@@ -98,7 +98,7 @@
           </div>
         </div>
 
-      </fieldset>
+      </fieldset> -->
 
       <fieldset class="form-group">
         <div class="col-lg-6">
@@ -135,7 +135,7 @@
         </div>
 
       </fieldset>
-      <fieldset class="form-group">
+      <!-- <fieldset class="form-group">
         <div class="col-lg-12">
           <label>Attach Product Photo</label>
           <input class="form-control" type="file" ngf-select ng-model="file" name="file">
@@ -144,7 +144,7 @@
           </div>
         </div>
 
-      </fieldset>
+      </fieldset> -->
 
       <fieldset class="form-group">
         <div class="col-lg-12">
